--- a/app/views/templates/Layout.scala.html
+++ b/app/views/templates/Layout.scala.html
@@ -21,6 +21,7 @@
 @import uk.gov.hmrc.hmrcfrontend.views.html.components._
 @import uk.gov.hmrc.hmrcfrontend.views.html.helpers._
 @import templates.FullWidthMainContent
+@import views.html.helper.CSPNonce
 
 @this(
         appConfig: FrontendAppConfig,
@@ -66,32 +67,26 @@
 }
 
 @additionalScripts = {
-    <script src='@controllers.routes.Assets.versioned("javascripts/application.min.js")'></script>
+    <script @CSPNonce.attr src='@controllers.routes.Assets.versioned("javascripts/application.min.js")'></script>
 }
 
 @beforeContent = {
 
-    <div class="@Css.gridRowCssClass">
-        <div class="@Css.gridColumnTwoThirds">
-        @if(showBackLink) {
-            @govukBackLink(BackLink.mimicsBrowserBackButtonViaJavaScript)
-        }
-        </div>
+    @if(appConfig.languageTranslationEnabled) {
+        @hmrcLanguageSelect(LanguageSelect(
+            if(messages.lang.code == "cy") Cy else En,
+            (En, routes.LanguageSwitchController.switchToLanguage("en").url),
+            (Cy, routes.LanguageSwitchController.switchToLanguage("cy").url)
+        ))
+    }
 
-        <div class="@Css.gridColumnOneThird">
-        @if(appConfig.languageTranslationEnabled) {
-            @hmrcLanguageSelect(LanguageSelect(
-                if(messages.lang.code == "cy") Cy else En,
-                (En, routes.LanguageSwitchController.switchToLanguage("en").url),
-                (Cy, routes.LanguageSwitchController.switchToLanguage("cy").url)
-            ))
-        }
-        </div>
-    </div>
+    @if(showBackLink) {
+        @govukBackLink(BackLink.mimicsBrowserBackButtonViaJavaScript)
+    }
 }
 
 @content = {
-@contentBlock
+    @contentBlock
 
     <div class="@Css.marginTop8CssClass">
     @hmrcReportTechnicalIssueHelper()
